src/objects/SMSConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SMSConfiguration Hierarchy Custom Setting</description>
    <fields>
        <fullName>Confirmation_Keyword__c</fullName>
        <description>confirmation text field</description>
        <inlineHelpText>Confirmation text field</inlineHelpText>
        <label>Confirmation Keyword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_keyword__c</fullName>
        <description>followup task on keyword</description>
        <inlineHelpText>followup task on keyword</inlineHelpText>
        <label>Follow up keyword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Appointment Confirmation with following template</description>
        <inlineHelpText>Send Appointment Confirmation with following template</inlineHelpText>
        <label>Service Appointment Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Appointment Reminder</description>
        <inlineHelpText>Send Appointment Reminder</inlineHelpText>
        <label>Service Appointment Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Hour_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1 Hour Reminder</description>
        <inlineHelpText>1 Hour Reminder</inlineHelpText>
        <label>1 Hour Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24_Hour_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>24 Hour prior</description>
        <inlineHelpText>24 Hour prior</inlineHelpText>
        <label>24 Hour Reminder</label>
        <type>Checkbox</type>
    </fields>
    <label>SMSConfiguration</label>
</CustomObject>